# ValaGL

./: .gitignore  README.md  meson.build  valagl.doap
data/: meson.build  valagl.gresource.xml
data/shaders/: vertex.glsl
data/ui/: window.blp
src/: app-error.vala  app.vala  canvas.vala  main.vala  meson.build
src/core/: camera.vala  core-error.vala  geometry-util.vala  gl-program.vala  ibo.vala  matrix-math.vala  vao.vala  vbo.vala
src/ui/: main-window.vala
subprojects/: libepoxy-vala.wrap
